[tool.poetry]
name = "adm_hw2"
version = "0.1.0"
description = ""
authors = ["Michele Ferraro <micfer96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
jupyter = "^1.0.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
